tests/cli/snapshots/cli__check__special_characters_in_keys.snap
---
source: tests/cli/check.rs
info:
  program: glot
  args:
    - check
    - missing
  env:
    NO_COLOR: "1"
---
success: false
exit_code: 1
----- stdout -----
error: "Common.missing-special"  missing-key
  --> ./src/app.tsx:8:20
  |
8 |             <span>{t("missing-special")}</span>
  |                    ^


✘ 1 problems (1 error, 0 warnings)

----- stderr -----
